--- a/roles/controller/tasks/mysql.yml
+++ b/roles/controller/tasks/mysql.yml
@@ -30,14 +30,14 @@
     host={{ item }}
     password={{ root_db_password }}
   with_items:
-    - $controller_ip
+    - {{ controller_ip }}
     - 127.0.0.1
 
 - name: ensure anonymous users are not in the database
   mysql_user: name='' host={{ item }} state=absent
   with_items:
-    - $controller_ip
-    - $inventory_hostname_short
+    - {{ controller_ip }}
+    - {{ inventory_hostname_short }}
     - 127.0.0.1
     - ::1
 
@@ -50,7 +50,7 @@
     password={{ keystone_db_password }}
     priv=keystone.*:ALL
   with_items:
-    - $controller_ip
+    - {{ controller_ip }}
     - 127.0.0.1
     - localhost
     - ::1
@@ -65,7 +65,7 @@
     password={{ glance_db_password }}
     priv=glance.*:ALL
   with_items:
-    - $storage_ip
+    - {{ storage_ip }}
     - 127.0.0.1
     - localhost
     - ::1
@@ -80,7 +80,7 @@
     password={{ cinder_db_password }}
     priv=cinder.*:ALL
   with_items:
-    - $storage_ip
+    - {{ storage_ip }}
     - 127.0.0.1
     - localhost
     - ::1
@@ -98,17 +98,17 @@
     - '%'
     - localhost
       
-- name: ensure quantum database is present
-  mysql_db: name=quantum
+- name: ensure neutron database is present
+  mysql_db: name=neutron
     
-- name: ensure quantum database user is present
+- name: ensure neutron database user is present
   mysql_user: >
-    name=quantum
+    name=neutron
     host={{ item }}
-    password={{ quantum_db_password }}
+    password={{ neutron_db_password }}
     priv=quantum.*:ALL
   with_items:
-    - $controller_ip
+    - {{ controller_ip }}
     - 127.0.0.1
     - localhost
     - ::1
