--- a/roles/dbserver/templates/etc/my.cnf
+++ b/roles/dbserver/templates/etc/my.cnf
@@ -1,4 +1,4 @@
-#
+
 # The MySQL database server configuration file.
 #
 # You can copy this to one of:
@@ -44,7 +44,7 @@ skip-external-locking
 #
 # Instead of skip-networking the default is now to listen only on
 # localhost which is more compatible and is not less secure.
-bind-address		= 0.0.0.0
+bind-address		= {{ controller_ip }}
 #
 # * Fine Tuning
 #
@@ -105,7 +105,10 @@ max_binlog_size         = 100M
 # ssl-cert=/etc/mysql/server-cert.pem
 # ssl-key=/etc/mysql/server-key.pem
 
-
+default-storage-engine = innodb
+collation-server = utf8_general_ci
+init-connect = 'SET NAMES utf8'
+character-set-server = utf8
 
 [mysqldump]
 quick
