--- a/roles/dbserver/tasks/main.yml
+++ b/roles/dbserver/tasks/main.yml
@@ -1,11 +1,16 @@
-- name: ensure mysql and mysql python client are installed
-  apt: pkg=$item
+- name: Ensure mysql server and mysql python client are installed
+  apt: pkg={{ item }}
   with_items:
     - python-mysqldb
     - mysql-server
 
-- name: mysql config file that binds to all interfaces
-  copy: src=etc/my.cnf dest=/etc/mysql/my.cnf owner=root group=root mode=0644
+- name: Ensure mysql binds to internal interface
+  template: >
+    src=etc/my.cnf 
+    dest=/etc/mysql/my.cnf 
+    owner=root 
+    group=root 
+    mode=0644
   notify: restart mysql
 
 # http://dev.mysql.com/doc/refman/5.6/en/default-privileges.html
@@ -30,14 +35,14 @@
     host={{ item }}
     password={{ root_db_password }}
   with_items:
-    - $controller_ip
+    - "{{ controller_ip }}"
     - 127.0.0.1
 
 - name: ensure anonymous users are not in the database
   mysql_user: name='' host={{ item }} state=absent
   with_items:
-    - $controller_ip
-    - $inventory_hostname_short
+    - "{{ controller_ip }}"
+    - "{{ inventory_hostname_short }}"
     - 127.0.0.1
     - ::1
 
@@ -50,7 +55,7 @@
     password={{ keystone_db_password }}
     priv=keystone.*:ALL
   with_items:
-    - $controller_ip
+    - "{{ controller_ip }}"
     - 127.0.0.1
     - localhost
     - ::1
@@ -65,7 +70,7 @@
     password={{ glance_db_password }}
     priv=glance.*:ALL
   with_items:
-    - $storage_ip
+    - "{{ storage_ip }}"
     - 127.0.0.1
     - localhost
     - ::1
@@ -80,7 +85,7 @@
     password={{ cinder_db_password }}
     priv=cinder.*:ALL
   with_items:
-    - $storage_ip
+    - "{{ storage_ip }}"
     - 127.0.0.1
     - localhost
     - ::1
@@ -98,17 +103,47 @@
     - '%'
     - localhost
       
-- name: ensure quantum database is present
-  mysql_db: name=quantum
+- name: ensure neutron database is present
+  mysql_db: name=neutron
     
-- name: ensure quantum database user is present
+- name: ensure neutron database user is present
   mysql_user: >
-    name=quantum
+    name=neutron
     host={{ item }}
-    password={{ quantum_db_password }}
-    priv=quantum.*:ALL
+    password={{ neutron_db_password }}
+    priv=heat.*:ALL
   with_items:
-    - $controller_ip
+    - "{{ controller_ip }}"
+    - 127.0.0.1
+    - localhost
+    - ::1
+                   
+- name: ensure heat database is present
+  mysql_db: name=heat
+    
+- name: ensure heat database user is present
+  mysql_user: >
+    name=heat
+    host={{ item }}
+    password={{ heat_db_password }}
+    priv=heat.*:ALL
+  with_items:
+    - "{{ controller_ip }}"
+    - 127.0.0.1
+    - localhost
+    - ::1
+                   
+- name: ensure trove database is present
+  mysql_db: name=trove
+    
+- name: ensure trove database user is present
+  mysql_user: >
+    name=trove
+    host={{ item }}
+    password={{ trove_db_password }}
+    priv=trove.*:ALL
+  with_items:
+    - "{{ controller_ip }}"
     - 127.0.0.1
     - localhost
     - ::1
