Se comenta linea bind-address

--- a/roles/dbserver/templates/etc/my.cnf
+++ b/roles/dbserver/templates/etc/my.cnf
@@ -44,7 +44,7 @@ skip-external-locking
 #
 # Instead of skip-networking the default is now to listen only on
 # localhost which is more compatible and is not less secure.
-bind-address		= {{ controller_ip }}
+#bind-address		= {{ controller_ip }}
 #
 # * Fine Tuning
 #
