--- a/site.yml
+++ b/site.yml
@@ -7,9 +7,19 @@
 - hosts: controller-nodes
   roles:
     - role: dbserver
+
+- hosts: controller-nodes
+  roles:
     - role: rabbitserver
+
+- hosts: controller-nodes
+  roles:
     - role: keystoneserver
 
+- hosts: controller-nodes
+  roles:
+    - role: keystone_population
+      
 # - hosts: storage-nodes
 #   roles: 
 #     - role: controller
