--- a/roles/keystoneserver/templates/etc/keystone/keystone.conf
+++ b/roles/keystoneserver/templates/etc/keystone/keystone.conf
@@ -581,6 +581,7 @@ log_dir = /var/log/keystone
 
 # Catalog template file name for use with the template catalog
 # backend. (string value)
+driver = keystone.catalog.backends.templated.Catalog
 template_file = /etc/keystone/default_catalog.templates
 
 # Keystone catalog backend driver. (string value)
