--- a/site.yml
+++ b/site.yml
@@ -1,16 +1,16 @@
 ---
 
-- hosts: all
-  roles:
-    - role: common
+# - hosts: all
+#   roles:
+#     - role: common
 
-- hosts: controller-nodes
-  roles:
-    - role: dbserver
+# - hosts: controller-nodes
+#   roles:
+#     - role: dbserver
 
-- hosts: controller-nodes
-  roles:
-    - role: rabbitserver
+# - hosts: controller-nodes
+#   roles:
+#     - role: rabbitserver
 
 - hosts: controller-nodes
   roles:
