--- a/site.yml
+++ b/site.yml
@@ -12,13 +12,13 @@
 #   roles:
 #     - role: rabbitserver
 
-# - hosts: controller-nodes
-#   roles:
-#     - role: keystoneserver
+- hosts: controller-nodes
+  roles:
+    - role: keystoneserver
 
-# - hosts: controller-nodes
-#   roles:
-#     - role: keystone_population
+- hosts: controller-nodes
+  roles:
+    - role: keystone_population
       
 - hosts: storage-nodes
   roles: 
