--- a/roles/glanceserver/templates/etc/glance/glance-api.conf
+++ b/roles/glanceserver/templates/etc/glance/glance-api.conf
@@ -234,18 +234,18 @@ registry_client_protocol = http
 # notifier_strategy = default
 
 # Driver or drivers to handle sending notifications
-# notification_driver = noop
+notification_driver = rabbit
 
 # Default publisher_id for outgoing notifications.
 # default_publisher_id = image.localhost
 
 # Configuration options if sending notifications via rabbitmq (these are
 # the defaults)
-rabbit_host = localhost
+rabbit_host = {{ controller_ip }}
 rabbit_port = 5672
 rabbit_use_ssl = false
-rabbit_userid = guest
-rabbit_password = 
+rabbit_userid = {{ rabbit_user }}
+rabbit_password = {{ rabbit_password }}
 rabbit_virtual_host = /
 rabbit_notification_exchange = glance
 rabbit_notification_topic = notifications
@@ -564,7 +564,7 @@ image_cache_dir = /var/lib/glance/image-cache/
 # Deprecated group/name - [DATABASE]/sql_connection
 # Deprecated group/name - [sql]/connection
 #connection = sqlite:////var/lib/glance/glancedb
-sql_connection =  mysql://glance:{{ glance_db_password }}@{{ controller_ip }}/glance
+connection =  mysql://glance:{{ glance_db_password }}@{{ controller_ip }}/glance
 
 # The SQL mode to be used for MySQL sessions. This option,
 # including the default, overrides any server-set SQL mode. To
