--- a/roles/glanceserver/templates/etc/glance/glance-registry.conf
+++ b/roles/glanceserver/templates/etc/glance/glance-registry.conf
@@ -92,7 +92,7 @@ limit_param_default = 25
 # Deprecated group/name - [DATABASE]/sql_connection
 # Deprecated group/name - [sql]/connection
 #connection = sqlite:////var/lib/glance/glancedb
-sql_connection =  mysql://glance:{{ glance_db_password }}@{{ controller_ip }}/glance
+connection =  mysql://glance:{{ glance_db_password }}@{{ controller_ip }}/glance
 
 # The SQL mode to be used for MySQL sessions. This option,
 # including the default, overrides any server-set SQL mode. To
