Terminando glance. Falla Cirros

--- a/site.yml
+++ b/site.yml
@@ -12,17 +12,21 @@
 #   roles:
 #     - role: rabbitserver
 
-- hosts: controller-nodes
-  roles:
-    - role: keystoneserver
+# - hosts: controller-nodes
+#   roles:
+#     - role: keystoneserver
 
-- hosts: controller-nodes
-  roles:
-    - role: keystone_population
+# - hosts: controller-nodes
+#   roles:
+#     - role: keystone_population
       
+# - hosts: storage-nodes
+#   roles: 
+#     - role: glanceserver
+
 - hosts: storage-nodes
   roles: 
-    - role: glanceserver
+    - role: glance_init
 
 # - hosts: compute-nodes
 #   roles:
