--- a/roles/glance_init/tasks/main.yml
+++ b/roles/glance_init/tasks/main.yml
@@ -1,14 +1,19 @@
+- name: ensure migrate_version table is in UTF-8
+  command: mysql -u glance -h {{ controller_ip }} -p{{ root_db_password }} -e 'alter table migrate_version convert to character set utf8 collate utf8_unicode_ci;' glance
 
-- name: initialize the database
-  glance_manage: action=dbsync
-
+- name: ensure glance db is initialized
+  command: /usr/bin/glance-manage db_sync
+  
 # Using glance_image module (ansible >= 1.2)
 - name: add cirros image to glance
   glance_image: >
     auth_url=http://{{ controller_ip }}:5000/v2.0/
     copy_from={{ img_url }}
     name={{ img_name }}
-    login_username=admin
+    container_format=bare
+    disk_format=qcow2
+    state=present
+    login_username=demo
     login_tenant_name=demo
-    login_password={{ admin_pass }}
+    login_password={{ demo_pass }}
     region_name={{ region }}
