--- a/roles/glance_init/vars/main.yml
+++ b/roles/glance_init/vars/main.yml
@@ -1,2 +1,2 @@
-img_name: cirros-0.3.1-x86_64
-img_url: http://cdn.download.cirros-cloud.net/0.3.1/cirros-0.3.1-x86_64-disk.img
+img_name: CirrOS 0.3.2
+img_url: http://cdn.download.cirros-cloud.net/0.3.2/cirros-0.3.2-x86_64-disk.img
