--- a/roles/dbserver/templates/etc/my.cnf
+++ b/roles/dbserver/templates/etc/my.cnf
@@ -19,6 +19,7 @@
 [client]
 port		= 3306 
 socket		= /var/run/mysqld/mysqld.sock
+default-character-set=utf8
 
 # Here is entries for some specific programs
 # The following values assume you have at least 32M ram
