--- a/roles/glanceserver/templates/etc/glance/glance-registry.conf
+++ b/roles/glanceserver/templates/etc/glance/glance-registry.conf
@@ -188,4 +188,4 @@ admin_password = {{ glance_identity_password }}
 # service name removed. For example, if your paste section name is
 # [pipeline:glance-registry-keystone], you would configure the flavor below
 # as 'keystone'.
-flavor = caching
+flavor = keystone
