--- a/site.yml
+++ b/site.yml
@@ -16,13 +16,13 @@
 #   roles:
 #     - role: keystoneserver
 
-# - hosts: controller-nodes
-#   roles:
-#     - role: keystone_population
+- hosts: controller-nodes
+  roles:
+    - role: keystone_population
       
-# - hosts: storage-nodes
-#   roles: 
-#     - role: glanceserver
+- hosts: storage-nodes
+  roles: 
+    - role: glanceserver
 
 - hosts: storage-nodes
   roles: 
