--- a/roles/glanceserver/templates/etc/glance/glance-api.conf
+++ b/roles/glanceserver/templates/etc/glance/glance-api.conf
@@ -660,7 +660,7 @@ admin_password = {{ glance_identity_password }}
 # service name removed. For example, if your paste section name is
 # [pipeline:glance-api-keystone], you would configure the flavor below
 # as 'keystone'.
-flavor = caching
+flavor = keystone
 
 [store_type_location_strategy]
 # The scheme list to use to get store preference order. The scheme must be
