--- a/site.yml
+++ b/site.yml
@@ -20,13 +20,21 @@
   roles:
     - role: keystone_population
       
-- hosts: storage-nodes
-  roles: 
-    - role: glanceserver
+# - hosts: storage-nodes
+#   roles: 
+#     - role: glanceserver
 
-- hosts: storage-nodes
-  roles: 
-    - role: glance_init
+# - hosts: storage-nodes
+#   roles: 
+#     - role: glance_init
+
+- hosts: controller-nodes
+  roles:
+    - role: novaserver
+
+- hosts: controller-nodes
+  roles:
+    - role: nova_init
 
 # - hosts: compute-nodes
 #   roles:
