Nova compute OK

--- a/roles/novaserver/templates/etc/nova/nova.conf
+++ b/roles/novaserver/templates/etc/nova/nova.conf
@@ -50,7 +50,7 @@
 # Mandatory general options #
 #############################
 # ip address of this host (string value)
-my_ip = {{ controller_ip }}
+my_ip = {{ ansible_eth1.ipv4.address }}
 #use_ipv6=false
 
 
