Neutron server OK a falta de ML2 plugin

--- a/roles/dbserver/tasks/main.yml
+++ b/roles/dbserver/tasks/main.yml
@@ -111,7 +111,7 @@
     name=neutron
     host={{ item }}
     password={{ neutron_db_password }}
-    priv=heat.*:ALL
+    priv=neutron.*:ALL
   with_items:
     - "{{ controller_ip }}"
     - 127.0.0.1
