--- a/roles/networking/templates/etc/neutron/plugins/ml2/ml2_conf.ini
+++ b/roles/networking/templates/etc/neutron/plugins/ml2/ml2_conf.ini
@@ -60,9 +60,15 @@ tunnel_id_ranges = 1:1000
 # vxlan_group =
 # Example: vxlan_group = 239.1.1.1
 
+[ovs]
+local_ip = {{ network_node_ip }}
+tunnel_type = gre
+enable_tunneling = True
+
 [securitygroup]
 # Controls if neutron security group is enabled or not.
 # It should be false when you use nova security group.
 # enable_security_group = True
 firewall_driver = neutron.agent.linux.iptables_firewall.OVSHybridIptablesFirewallDriver
 enable_security_group = True
+
