--- a/roles/novaserver/templates/etc/nova/nova.conf
+++ b/roles/novaserver/templates/etc/nova/nova.conf
@@ -270,9 +270,9 @@ firewall_driver=nova.virt.firewall.NoopFirewallDriver
 # This is the URL of your neutron server:
 neutron_url=http://{{ controller_ip }}:9696
 neutron_auth_strategy=keystone
-neutron_admin_tenant_name=admin
-neutron_admin_username=admin
-neutron_admin_password={{ admin_pass }}
+neutron_admin_tenant_name=service
+neutron_admin_username=neutron
+neutron_admin_password={{ neutron_identity_password }}
 # This is the URL of your Keystone server
 neutron_admin_auth_url=http://{{ controller_ip }}:35357/v2.0
 
