Haciendo que br-ex funcione al reiniciar

--- a/roles/openvswitch/handlers/main.yml
+++ b/roles/openvswitch/handlers/main.yml
@@ -4,3 +4,6 @@
     - neutron-plugin-openvswitch-agent 
     - openvswitch-switch
 
+- name: restart network
+  service: name=networking state=restarted
+
