--- a/roles/openvswitch/tasks/main.yml
+++ b/roles/openvswitch/tasks/main.yml
@@ -1,12 +1,23 @@
 - name: ensure br-int switch is created
-- openvswitch_bridge: bridge=br-int state=present
-
+  openvswitch_bridge: bridge=br-int state=present
+  notify: restart ovs agent
+  
 - name: ensure br-ex switch is created
-- openvswitch_bridge: bridge=br-ex state=present
-
+  openvswitch_bridge: bridge=br-ex state=present
+  notify: restart ovs agent
+  
 - name: ensure br-ex is configured and external interface added permanently
   template: >-
     src=etc/network/interfaces
     dest=/etc/network/interfaces
     owner=root group=root mode=0644
-  notify: restart ovs agent
+  notify: restart network
+
+- name: ensure br-ex is active after reboot
+  template: >-
+    src=etc/rc.local
+    dest=/etc/rc.local
+    owner=root
+    group=root
+    mode=0600
+
