--- a/roles/networking/tasks/main.yml
+++ b/roles/networking/tasks/main.yml
@@ -13,11 +13,22 @@
     - neutron-plugin-ml2
     - neutron-plugin-openvswitch-agent
     - openvswitch-datapath-dkms
+    - openvswitch-datapath-source
     - neutron-metadata-agent
     - neutron-lbaas-agent
     - neutron-l3-agent
     - neutron-dhcp-agent
 
+- name: ensure OVS kernel module is loaded
+  command: /sbin/modprobe openvswitch_mod
+  register: modprobe_result
+  ignore_errors: True
+
+- name: build openvswitch-datapath kernel module - this may take a while
+  command: /usr/bin/module-assistant -i auto-install openvswitch-datapath
+  when: modprobe_result|failed
+  notify: restart neutron agents
+  
 - name: obtain service tenant id
   shell: >-
     keystone --os-endpoint http://{{ controller_ip }}:35357/v2.0 --os-token \
