--- a/site.yml
+++ b/site.yml
@@ -1,8 +1,8 @@
 ---
 
-# - hosts: all
-#   roles:
-#     - role: common
+- hosts: all
+  roles:
+    - role: common
 
 # - hosts: controller-nodes
 #   roles:
