--- a/site.yml
+++ b/site.yml
@@ -1,12 +1,16 @@
 ---
 
-- hosts: all
-  roles:
-    - role: common
+# - hosts: all
+#   roles:
+#     - role: common
 
 # - hosts: controller-nodes
 #   roles:
 #     - role: dbserver
+
+# - hosts: controller-nodes
+#   roles:
+#     - role: dbserver_population
 
 # - hosts: controller-nodes
 #   roles:
