--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -7,8 +7,8 @@
     mode=0644
   notify: apt update
 
-#- name: Ensure system is upgraded (It can take a long time)
-#  apt: upgrade=yes update_cache=yes
+- name: Ensure system is upgraded (It can take a long time)
+  apt: upgrade=yes update_cache=yes
 
 - name: Ensure ntp is installed
   apt: name=ntp
