--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,10 +1,5 @@
-# config file for ansible -- http://ansible.github.com
-# Set ANSIBLE_CONFIG environment variable to use this
-# See http://ansible.github.com/examples.html#configuration-defaults
 [defaults]
-
 hostfile = ansible_hosts
-
 private_key_file = vagrant_private_key
-
 remote_user = vagrant
+host_key_checking = False
