keystone_authtoken sections uploaded. Fixes #10

--- a/roles/cinderserver/templates/etc/cinder/cinder.conf
+++ b/roles/cinderserver/templates/etc/cinder/cinder.conf
@@ -2003,15 +2003,15 @@ connection = mysql://cinder:{{ cinder_db_password }}@{{ controller_ip }}/cinder
 
 # Host providing the admin Identity API endpoint. Deprecated,
 # use identity_uri. (string value)
-auth_host={{ controller_ip }}
+#auth_host={{ controller_ip }}
 
 # Port of the admin Identity API endpoint. Deprecated, use
 # identity_uri. (integer value)
-auth_port=35357
+#auth_port=35357
 
 # Protocol of the admin Identity API endpoint (http or https).
 # Deprecated, use identity_uri. (string value)
-auth_protocol=http
+#auth_protocol=http
 
 # Complete public Identity API endpoint (string value)
 auth_uri=http://{{ controller_ip }}:5000
@@ -2019,7 +2019,7 @@ auth_uri=http://{{ controller_ip }}:5000
 # Complete admin Identity API endpoint. This should specify
 # the unversioned root endpoint e.g. https://localhost:35357/
 # (string value)
-#identity_uri=<None>
+identity_uri = http://{{ controller_ip }}:35357
 
 # API version of the admin Identity API endpoint (string
 # value)
