--- a/roles/glanceserver/templates/etc/glance/glance-registry.conf
+++ b/roles/glanceserver/templates/etc/glance/glance-registry.conf
@@ -173,9 +173,7 @@ connection =  mysql://glance:{{ glance_db_password }}@{{ controller_ip }}/glance
 #db_max_retries = 20
 
 [keystone_authtoken]
-auth_host = {{ controller_ip }}
-auth_port = 35357
-auth_protocol = http
+identity_uri = http://{{ controller_ip }}:35357
 admin_tenant_name = service
 admin_user = glance
 admin_password = {{ glance_identity_password }}
