--- a/roles/novaserver/templates/etc/nova/nova.conf
+++ b/roles/novaserver/templates/etc/nova/nova.conf
@@ -588,9 +588,7 @@ enabled=true
 ######################
 [keystone_authtoken]
 auth_uri = http://{{ controller_ip }}:5000
-auth_host = {{ controller_ip }}
-auth_port = 35357
-auth_protocol = http
+identity_uri = http://{{ controller_ip }}:35357
 admin_tenant_name = service
 admin_user = nova
 admin_password = {{ nova_identity_password }}
