--- a/roles/neutron-agents/templates/etc/neutron/neutron.conf
+++ b/roles/neutron-agents/templates/etc/neutron/neutron.conf
@@ -391,9 +391,8 @@ root_helper = sudo neutron-rootwrap /etc/neutron/rootwrap.conf
 # ===========  end of items for agent management extension =====
 
 [keystone_authtoken]
-auth_host = {{ controller_ip }}
-auth_port = 35357
-auth_protocol = http
+auth_uri = http://{{ controller_ip }}:5000
+identity_uri = http://{{ controller_ip }}:35357
 admin_tenant_name = service
 admin_user = neutron
 admin_password = {{ neutron_identity_password }}
