--- a/roles/openvswitch/tasks/main.yml
+++ b/roles/openvswitch/tasks/main.yml
@@ -27,12 +27,25 @@
 # course your public IP address of the router which will deliver network to your
 # virtual machines.
 
-- name: ensure br-ex is configured and external interface added permanently
+# - name: ensure br-ex is configured and external interface added permanently
+#   template: >-
+#     src=etc/network/interfaces
+#     dest=/etc/network/interfaces
+#     owner=root group=root mode=0644
+#   notify: restart network
+
+# External bridge configuration (From https://github.com/openstack-ansible/)
+
+- name: ensure script to configure network is in place
   template: >-
-    src=etc/network/interfaces
-    dest=/etc/network/interfaces
-    owner=root group=root mode=0644
-  notify: restart network
+    src=etc/network/if-pre-up.d/configure_br-ex
+    dest=/etc/network/if-pre-up.d/configure_br-ex
+    owner=root
+    group=root
+    mode=0755
+
+- name: ensure configure script is run at least once
+  command: /etc/network/if-pre-up.d/configure_br-ex
 
 # - name: ensure br-ex is active after reboot
 #   template: >-
