--- a/roles/novaserver/templates/etc/nova/nova.conf
+++ b/roles/novaserver/templates/etc/nova/nova.conf
@@ -566,7 +566,7 @@ connection=mysql://nova:{{ nova_db_password }}@{{ controller_ip }}/nova
 [spice]
 # location of spice html5 console proxy, in the form
 # "http://www.example.com:6082/spice_auto.html" (string value)
-html5proxy_base_url=http://{{ controller_ip }}:6082/spice_auto.html
+html5proxy_base_url=http://{{ controller_external_ip }}:6082/spice_auto.html
 
 # IP address on which instance spice server should listen (string value)
 server_listen=0.0.0.0
