--- a/roles/openvswitch/tasks/main.yml
+++ b/roles/openvswitch/tasks/main.yml
@@ -34,19 +34,15 @@
     owner=root group=root mode=0644
   notify: restart network
 
-# External bridge configuration (From https://github.com/openstack-ansible/)
-
-- name: ensure script to configure network is in place
+- name: ensure openvswitch-switch init is modified
   template: >-
-    src=etc/network/if-pre-up.d/configure_br-ex
-    dest=/etc/network/if-pre-up.d/configure_br-ex
-    owner=root
-    group=root
-    mode=0755
+    src=etc/init.d/openvswitch-switch
+    dest=/etc/init.d/openvswitch-switch
+    owner=root group=root mode=0755
 
-- name: ensure configure script is run at least once
-  command: /etc/network/if-pre-up.d/configure_br-ex
-
+- name: ensure openvswitch-switch init is executed before network one
+  command: /sbin/insserv openvswitch-switch
+  
 # - name: ensure br-ex is active after reboot
 #   template: >-
 #     src=etc/rc.local
