External IP deleting and br-ex configuration

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,4 @@
 [defaults]
-hostfile = ansible_hosts
-private_key_file = vagrant_private_key
-remote_user = vagrant
+hostfile = ansible_hosts_osiris
+remote_user = root
 host_key_checking = False
