--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,5 @@
 [defaults]
-hostfile = ansible_hosts_osiris
-remote_user = root
+hostfile = ansible_hosts
+remote_user = vagrant
+private_key_file = vagrant_private_key
 host_key_checking = False
